--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="he">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome - Your Name</title>
-    <style>
+    <title>ברוכים הבאים - טוני</title>
+    <link rel="stylesheet" href="styles.css">
+    <!-- <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -34,13 +35,17 @@
             width: 100%;
             height: 400px;
         }
-    </style>
+    </style> -->
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to My Page</h1>
-        <p>Hi, I'm [Your Name], a [Your Profession or Hobby]. Here are some of my free videos.</p>
-        
+        <h1>Programming with Tony</h1>
+        <p>
+            .שלום, אני טוני, מורה פרטי בתחום מדעי המחשב<br>
+            .לימדתי במשך יותר מחמש שנים בלמעלה מ-10 אוניברסיטאות ומכללות שונות<br>
+            .כאן תוכלו למצוא מספר סרטונים חינמיים שלי
+        </p>
+
         <!-- Embed YouTube Video 1 -->
         <iframe src="https://www.youtube.com/embed/O68_AAn7uWY" allowfullscreen></iframe>
         
