--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="he">
+<html lang="he" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -66,15 +66,15 @@
         <div class="profile-container" id="about-me">
             <img src="resources/profile_image.jpg" alt="Tony's Profile" class="profile-image"> <!-- Add your profile image path -->
             <p>
-                ,שלום, אני טוני, מורה פרטי למדעי המחשב<br>
+                שלום, אני טוני, מורה פרטי למדעי המחשב,<br>
                 בוגר תואר מדמ"ח בהצטיינות , ובעל 5 שנות ניסיון <br>
-                .כמורה פרטי וכמעביר מרתונים במקצועות התכנות<br>
+                כמורה פרטי וכמעביר מרתונים במקצועות התכנות.<br>
                 <br>
                 באתר זה ניתן לראות סרטונים חינמיים שהעליתי <br>
-                .או ליצור איתי קשר על מנת לרכוש הקלטות,לקבוע שיעור פרטי או קבוצתי<br>
+                או ליצור איתי קשר על מנת לרכוש הקלטות,לקבוע שיעור פרטי או קבוצתי.<br>
                 <br>
-                ,לימדתי בלמעלה מ-10 אוניברסיטאות ומכללות שונות<br>
-                .ואני מתאים את השיעור בצורה מדוייקת לסילבוס של המוסד/הקורס<br>
+                לימדתי בלמעלה מ-10 אוניברסיטאות ומכללות שונות,<br>
+                ואני מתאים את השיעור בצורה מדוייקת לסילבוס של המוסד/הקורס.<br>
             </p>
         </div>
 
@@ -101,7 +101,7 @@
             <h2>המלצות ותודות</h2>
             <p>
                 מעל למאתיים תלמידים שלימדתי בהצלחה במגוון מקצועות ומוסדות לימוד שונים <br>
-                 .כאן תוכלו לראות חלק מהתודות שקיבלתי במהלך השנה האחרונה<br><br>
+                 כאן תוכלו לראות חלק מהתודות שקיבלתי במהלך השנה האחרונה.<br><br>
             </p>
             <img src="resources/thank_you_img.png" alt="תמונות תודות מתלמידים" class="recommendation-photo">
         </div>
