--- a/index.html
+++ b/index.html
@@ -212,25 +212,23 @@
 
 
 
-    
-    <section id="contact" class="contact-section">
-        <h2>צור קשר</h2>
-        <div class="contact-icons">
+    <footer>
+            <div class="contact-icons">
 
-            <a class="icon-button" href="https://wa.me/+972522569089" target="_blank">
-                <img src="resources/whatssap_img.png" alt="WhatsApp" class="icon">
-            </a>
-            <a class="icon-button" href="https://www.youtube.com/@Programming_With_Tony" target="_blank">
-                <img src="resources/youtube_img.png" alt="YouTube" class="icon">
-            </a>
-            <a class="icon-button" href="mailto:programmingwithtony@gmail.com">
-                <img src="resources/gmail_img.png" alt="Gmail" class="icon">
-            </a>
-            <a class="icon-button" href="https://www.linkedin.com/in/tony-hasson/" target="_blank">
-                <img src="resources/linkedin_img.png" alt="LinkedIn" class="icon">
-            </a>
-        </div>
-    </section> 
+                <a class="icon-button" href="https://wa.me/+972522569089" target="_blank">
+                    <img src="resources/whatssap_img.png" alt="WhatsApp" class="icon">
+                </a>
+                <a class="icon-button" href="https://www.youtube.com/@Programming_With_Tony" target="_blank">
+                    <img src="resources/youtube_img.png" alt="YouTube" class="icon">
+                </a>
+                <a class="icon-button" href="mailto:programmingwithtony@gmail.com">
+                    <img src="resources/gmail_img.png" alt="Gmail" class="icon">
+                </a>
+                <a class="icon-button" href="https://www.linkedin.com/in/tony-hasson/" target="_blank">
+                    <img src="resources/linkedin_img.png" alt="LinkedIn" class="icon">
+                </a>
+            </div>
+    </footer>   
 
 
     <script src="scripts.js"></script>
