--- a/universities/HIT/advanced-workshop.html
+++ b/universities/HIT/advanced-workshop.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>סדנה מתקדמת</title>
-    <link rel="stylesheet" href="../../styles.css">
+    <link rel="stylesheet" href="../../styles/global.css">
+    <link rel="stylesheet" href="../../styles/layout.css">
+    <link rel="stylesheet" href="../../styles/components.css">
     <link rel="stylesheet" href="../../styles/page_specific/advanced_c.css">
 </head>
 <body>
