--- a/universities/HIT/intro-to-cs.html
+++ b/universities/HIT/intro-to-cs.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>מבוא למדעי המחשב</title>
+    <link rel="stylesheet" href="../../styles/global.css">
+    <link rel="stylesheet" href="../../styles/layout.css">
+    <link rel="stylesheet" href="../../styles/components.css">
     <link rel="stylesheet" href="../../styles.css">
 </head>
 <body>
