extra text to OOP + whatssap follow button

--- a/universities/HIT/oop.html
+++ b/universities/HIT/oop.html
@@ -14,6 +14,9 @@
     <div class="container">
          <!-- Go Back Button -->
          <button class="btn go-back" onclick="history.back()">חזור אחורה</button>
+         <a class="follow-icon-button" href="https://wa.me/+972522569089" target="_blank">
+            <img src="../../resources/whatssap_img.png" alt="WhatsApp" class="icon">
+        </a>
         <!-- <h1>תכנות מונחה עצמים</h1>
         <p>בקורס מוקלט זה , אני עובר בצורה הכי תכלסית על כל החומר הדרוש למבחן</p>
         <p> פותר המון שאלות ממבחנים</p>
@@ -59,12 +62,12 @@
                 <strong>שיעור ראשון חינם!</strong>
                 <p>קבל הצצה לקורס עם שיעור מבוא מעמיק וסשן פתרון של מבחן 2019 – זמינים לך לצפייה:</p>
                 <div class="lesson-links">
-                    <a href="#" class="lesson-link">שיעור ראשון</a>
-                    <a href="#" class="lesson-link">מבחן 2019</a>
+                    <a href="https://www.youtube.com/watch?v=dzHs5KG6eeE" class="lesson-link">שיעור ראשון</a>
+                    <a href="https://www.youtube.com/watch?v=O68_AAn7uWY" class="lesson-link">מבחן 2019</a>
                 </div>
             </div>
             <div class="course-topics">
-                <button class="btn" onclick="toggleTopics('topics-list-id')">  הצג נושאים</button>
+                <!-- <button class="btn" onclick="toggleTopics('topics-list-id')">  הצג נושאים</button> -->
                 <p>שיעור זה עובר על:</p>
                 <ul id="topics-list-id" class="topics-list">
                     <li>בנאי והורס</li>
@@ -81,26 +84,32 @@
             </div>
             
         </div>
-
+        
         <div class="section">
             <h2>שיעורים מתקדמים (בתשלום)</h2>
             <div class="lesson">
                 <h3>שיעור 2:</h3>
                 <p>העמסת אופרטורים מורחבת, פונקציות חבריות, משתנים ופונקציות סטטיות</p>
+                <a href="https://www.youtube.com/watch?v=M09_9DNKs7g" class="lesson-link">שיעור שני</a>
             </div>
             <div class="lesson">
                 <h3>שיעור 3:</h3>
                 <p>פולימורפיזם והורשה, פונקציות וירטואליות והורסים וירטואליים, מחלקות אבסטרקטיות ופונקציות וירטואליות טהורות</p>
+                <a href="https://www.youtube.com/watch?v=7rcFeIJAioc" class="lesson-link">שיעור שלישי</a>
             </div>
             <div class="lesson">
                 <h3>שיעור 4:</h3>
                 <p>תבניות (Templates), עבודה עם ספריית ה-STL</p>
+                <a href="https://www.youtube.com/watch?v=aF3bFSFne2c" class="lesson-link">שיעור רביעי</a>
             </div>
         </div>
 
         <div class="section">
             <h2>שיעורי חזרה למבחן</h2>
             <p>בנוסף, הקורס כולל שלושה שיעורי חזרה למבחן, כל אחד באורך של שעתיים וחצי ומעלה, המיועדים לחיזוק המיומנויות והביטחון שלך לפני הבחינה.</p>
+            <a href="https://www.youtube.com/watch?v=1X7NBwkTUiw" class="lesson-link"> חזרה למבחן 1 </a>
+            <a href="https://www.youtube.com/watch?v=PP2FhUUDlps" class="lesson-link"> חזרה למבחן 2 </a>
+            <a href="https://www.youtube.com/watch?v=UiNCRGDP2rs" class="lesson-link"> חזרה למבחן 3 </a>
         </div>
 
         <div class="price-section">
@@ -111,6 +120,26 @@
 
 
     </div>
+
+
+
+    <footer>
+        <div class="contact-icons">
+
+            <a class="icon-button" href="https://wa.me/+972522569089" target="_blank">
+                <img src="../../resources/whatssap_img.png" alt="WhatsApp" class="icon">
+            </a>
+            <a class="icon-button" href="https://www.youtube.com/@Programming_With_Tony" target="_blank">
+                <img src="../../resources/youtube_img.png" alt="YouTube" class="icon">
+            </a>
+            <a class="icon-button" href="mailto:programmingwithtony@gmail.com">
+                <img src="../../resources/gmail_img.png" alt="Gmail" class="icon">
+            </a>
+            <a class="icon-button" href="https://www.linkedin.com/in/tony-hasson/" target="_blank">
+                <img src="../../resources/linkedin_img.png" alt="LinkedIn" class="icon">
+            </a>
+        </div>
+    </footer>   
 
     <script src="../../scripts.js"></script>
 </body>
