update to courses

--- a/universities/HIT/intro-to-cs.html
+++ b/universities/HIT/intro-to-cs.html
@@ -12,7 +12,11 @@
 <body>
     <div class="container">
          <!-- Go Back Button -->
-         <button class="btn go-back" onclick="history.back()">חזור אחורה</button>
+         <a href="../../index.html" class="btn"> דף הבית </a>
+         
+         <a class="follow-icon-button" href="https://wa.me/+972522569089" target="_blank">
+            <img src="../../resources/whatssap_img.png" alt="WhatsApp" class="icon">
+        </a>
         <h1>מבוא למדעי המחשב</h1>
         <p>תיאור קצר של הקורס "מבוא למדעי המחשב".</p>
         <p>בקורס זה תלמדו את הבסיס לתכנות, אלגוריתמים, מבני נתונים ועוד.</p>
