whatssap to side of homepage

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body>
     <div class="container">
 
-       
+        <a class="follow-icon-button" href="https://wa.me/+972522569089" target="_blank">
+            <img src="resources/whatssap_img.png" alt="WhatsApp" class="icon">
+        </a>
 
 
         <!-- about me -->
@@ -62,10 +64,10 @@
 
         <!-- recommendations -->
         <div class="recommendation-section">
-            <h2>המלצות ותודות</h2>
+            <h2>הודעות מתלמידי עבר</h2>
             <p>
                 מעל למאתיים תלמידים שלימדתי בהצלחה במגוון מקצועות ומוסדות לימוד שונים <br>
-                כאן תוכלו לראות חלק מהתודות שקיבלתי במהלך השנה האחרונה.<br><br>
+                כאן תוכלו לראות חלק מההודעות שקיבלתי במהלך השנה האחרונה.<br><br>
             </p>
             <div class="image-gallery">
                 <img id="img1" class="gallery-photo" alt="תמונה 1" onclick="enlargeImage(this)">
