--- a/universities/HIT/advanced-workshop.html
+++ b/universities/HIT/advanced-workshop.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="../../styles/global.css">
     <link rel="stylesheet" href="../../styles/layout.css">
     <link rel="stylesheet" href="../../styles/components.css">
-    <link rel="stylesheet" href="../../styles/page_specific/advanced_c.css">
+    <link rel="stylesheet" href="../../styles/courses.css">
+    <!-- <link rel="stylesheet" href="../../styles/page_specific/advanced_c.css"> -->
 </head>
 <body>
     <!-- <div class="container"> -->
