--- a/universities/HIT/intro-to-cs.html
+++ b/universities/HIT/intro-to-cs.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../styles/global.css">
     <link rel="stylesheet" href="../../styles/layout.css">
     <link rel="stylesheet" href="../../styles/components.css">
-    <link rel="stylesheet" href="../../styles.css">
+    <link rel="stylesheet" href="../../styles/courses.css">
 </head>
 <body>
     <div class="container">
