--- a/universities/HIT/oop.html
+++ b/universities/HIT/oop.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="../../styles/global.css">
     <link rel="stylesheet" href="../../styles/layout.css">
     <link rel="stylesheet" href="../../styles/components.css">
-    <link rel="stylesheet" href="../../styles/page_specific/oop-course.css">
+    <link rel="stylesheet" href="../../styles/courses.css">
+    <!-- <link rel="stylesheet" href="../../styles/page_specific/oop-course.css"> -->
     
 </head>
 <body>
