--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
         <div class="profile-container" id="about-me">
             <img src="resources/profile_image.jpg" alt="Tony's Profile" class="profile-image"> <!-- Add your profile image path -->
             <p>
-                שלום, אני טוני, מורה פרטי למדעי המחשב,<br>
-                בוגר תואר מדמ"ח בהצטיינות ובעל 5 שנות ניסיון <br>
-                כמורה פרטי ומעביר מרתונים במקצועות התכנות.<br>
+                שלום!<br>
+                 אני טוני, מורה פרטי למדעי המחשב,<br>
+                בוגר תואר מדמ"ח בהצטיינות ובעל 5 שנות ניסיון 
+                כמורה פרטי,<br>
+                 מעביר מרתונים במקצועות התכנות השונים.<br>
                 <br>
                 באתר זה ניתן להתרשם מהקורסים שאני מציע; חלק מהסרטונים חינמיים והגישה אליהם היא חופשית. <br>
                 מוזמנים ליצור איתי קשר כדי לרכוש את שאר הקורסים או לקבוע שיעור פרטי/קבוצתי.<br>
