--- a/universities/HIT/advanced-workshop.html
+++ b/universities/HIT/advanced-workshop.html
@@ -38,7 +38,7 @@
         <h1>קורס סדנה מתקדמת</h1>
         <p class="intro">בקורס מוקלט זה, אני עובר בצורה הכי תכלסית על כל החומר הדרוש למבחן, פותר המון שאלות ממבחנים, ומראה את הדרך שלי איך לגשת לשאלות.</p>
         <p class="intro">תוך כדי כמובן אתן גם טיפים קריטיים להצלחה שלכם במבחן.</p>
-        <h2>מה הסדנה כוללת:</h2>
+        <h2>מה הקורס כולל:</h2>
 
 
 
@@ -85,19 +85,22 @@
                 </p>
                 <a href="https://www.youtube.com/watch?v=tztaSJgL5K8" class="lesson-link">שיעור שלישי</a>
             </div>
-        </section>
 
-        <section class="section">
-            <h3>שיעורי חזרה לקראת המבחן:</h3>
-            <p>שלושה שיעורי חזרה מרוכזים באורך כולל של 10 שעות, בהם נעבור על טכניקות לפתירת שאלות מבחן ונחדד את ההבנה.</p>
-            <a href="https://www.youtube.com/watch?v=6jc0oTcDqeU" class="lesson-link"> חזרה למבחן 1 </a>
-            <a href="https://www.youtube.com/watch?v=iavPPoxysGw" class="lesson-link"> חזרה למבחן 2 </a>
-            <a href="https://www.youtube.com/watch?v=PT5nGnrgGA8" class="lesson-link"> חזרה למבחן 3 </a>
+            <div class="lesson">
+                <h3>שיעורי חזרה לקראת המבחן:</h3>
+              
+                <p>שלושה שיעורי חזרה מרוכזים באורך כולל של 10 שעות, בהם נעבור על טכניקות לפתירת שאלות מבחן ונחדד את ההבנה.</p>
+
+                <a href="https://www.youtube.com/watch?v=6jc0oTcDqeU" class="lesson-link"> חזרה למבחן 1 </a>
+                <a href="https://www.youtube.com/watch?v=iavPPoxysGw" class="lesson-link"> חזרה למבחן 2 </a>
+                <a href="https://www.youtube.com/watch?v=PT5nGnrgGA8" class="lesson-link"> חזרה למבחן 3 </a>
+            </div>
+
         </section>
 
         <div class="price-section">
             <h2> 200 ש"ח בלבד לגישה לכל ההקלטות!</h2>
-            <p>כמובן אחרי הרכישה,אם יש לך שאלות/דברים לא מובנים מוזמנ/ת ליצור איתי קשר חופשי ואעזור בכיף</p>
+            <p>כמובן אחרי הרכישה,ניתן לפנות אליי באופן חופשי ואעזור בכיף</p>
         </div>
     </div>
 
