--- a/universities/HIT/oop.html
+++ b/universities/HIT/oop.html
@@ -111,19 +111,19 @@
                 <p>תבניות (Templates), עבודה עם ספריית ה-STL</p>
                 <a href="https://www.youtube.com/watch?v=aF3bFSFne2c" class="lesson-link">שיעור רביעי</a>
             </div>
+            <div class="lesson">
+                <h3>שיעורי חזרה למבחן</h3>
+                <p>בנוסף, הקורס כולל שלושה שיעורי חזרה למבחן, כל אחד באורך של שעתיים וחצי ומעלה, המיועדים לחיזוק המיומנויות והביטחון שלך לפני הבחינה.</p>
+                <a href="https://www.youtube.com/watch?v=1X7NBwkTUiw" class="lesson-link"> חזרה למבחן 1 </a>
+                <a href="https://www.youtube.com/watch?v=PP2FhUUDlps" class="lesson-link"> חזרה למבחן 2 </a>
+                <a href="https://www.youtube.com/watch?v=UiNCRGDP2rs" class="lesson-link"> חזרה למבחן 3 </a>
+            </div>
         </div>
 
-        <div class="section">
-            <h2>שיעורי חזרה למבחן</h2>
-            <p>בנוסף, הקורס כולל שלושה שיעורי חזרה למבחן, כל אחד באורך של שעתיים וחצי ומעלה, המיועדים לחיזוק המיומנויות והביטחון שלך לפני הבחינה.</p>
-            <a href="https://www.youtube.com/watch?v=1X7NBwkTUiw" class="lesson-link"> חזרה למבחן 1 </a>
-            <a href="https://www.youtube.com/watch?v=PP2FhUUDlps" class="lesson-link"> חזרה למבחן 2 </a>
-            <a href="https://www.youtube.com/watch?v=UiNCRGDP2rs" class="lesson-link"> חזרה למבחן 3 </a>
-        </div>
 
         <div class="price-section">
             <h2> 200 ש"ח בלבד לגישה לכל ההקלטות!</h2>
-            <p>כמובן אחרי הרכישה,אם יש לך שאלות/דברים לא מובנים מוזמנ/ת ליצור איתי קשר חופשי ואעזור בכיף</p>
+            <p>כמובן אחרי הרכישה,ניתן לפנות אליי באופן חופשי ואעזור בכיף</p>
         </div>
 
 
